Fix content and spacings

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -13,6 +13,10 @@ p{
   border-width: .2rem;
 }
 
+.jumbotron{
+  padding: 1.5rem 2rem;
+}
+
 main{
 
   .about{
@@ -45,6 +49,9 @@ main{
   }
 }
 
+.list-group-item{
+  padding: 0.40rem 1.25rem;
+}
 
 .cover{
   object-fit: cover;
